# SkillGuard

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.agents/skills/: .flowguard-skill-suite-ownership.json
.flowguard/: adoption_log.jsonl  project.toml
.flowguard/declared_check_supervision/: model.py  run_checks.py
.flowguard/development_process_flow/: current_runtime_authority_model.py  portfolio_scope_lifecycle_model.py  skillguard_executable_contract_model.py  skillguard_global_router_model.py  skillguard_runtime_contract_model.py  skillguard_template_lifecycle_model.py
.flowguard/model_miss_reviews/: skillguard-external-full-testmesh-source-authority-20260715.json  skillguard-external-owner-evidence-path-budget-20260715.json  skillguard-external-target-binding-20260715.json  skillguard-frozen-owner-runner-shared-owner-process-count-20260715.json  skillguard-install-recovery-policy-stale-projection-20260716.json  skillguard-install-upgrade-head-source-drift-20260715.json  skillguard-installed-audit-source-boundary-20260715.json  skillguard-installed-self-host-runtime-boundary-20260715.json  skillguard-installed-suite-external-root-binding-20260715.json  skillguard-installed-supervisor-runtime-boundary-20260715.json  skillguard-installed-target-supervisor-recompile-20260715.json  skillguard-jsonl-claim-first-background-owner-20260719.json  skillguard-model-authority-read-bytecode-side-effect-20260715.json  skillguard-openspec-locale-canonical-hash-20260715.json  skillguard-openspec-portable-ref-coverage-20260715.json  skillguard-public-export-candidate-identity-20260719.json  skillguard-release-version-test-identity-20260719.json  skillguard-self-project-adoption-root-20260715.json  skillguard-task-checkbox-source-freshness-20260715.json  skillguard-v2-cross-platform-source-fingerprint-20260710.json  skillguard-v2-empty-non-production-schedule-20260714.json  skillguard-v2-failed-lock-recovery-20260710.json  skillguard-v2-nested-skill-root-installation-20260714.json  skillguard-v2-portfolio-runtime-20260710.json  skillguard-v2-single-skill-transaction-20260714.json  skillguard-v2-subtree-role-override-20260714.json  (+4 more)
.flowguard/spec_context/: bindings.json
docs/: flowguard_adoption_log.md
examples/: README.md  skill-idea.json  suite-blueprint.json
references/: 01-core-concepts.md  02-single-skill-standard.md  03-suite-map-standard.md  04-skill-contract-standard.md  05-suite-contract-standard.md  06-evidence-freshness-and-closure-boundaries.md  07-structured-ai-judgments.md  08-checker-change-fixture-policy.md  09-skillguard-self-check.md  10-practical-workflows.md
tests/: _runtime_authority_consumer_fixture.py  _skillguard_v2_runtime_fixture.py  test_artifact_validators.py  test_author_maintenance_context.py  test_check_execution_single_flight.py  test_check_runner_v2.py  test_claimed_run_runtime.py  test_closure_profiles_v2.py  test_conditional_noop_closure_v2.py  test_consumer_distribution.py  test_contract_compiler_v2.py  test_current_runtime_authority.py  test_current_runtime_authority_model.py  test_depth_profile_template_v2.py  test_evidence_receipts.py  test_evidence_store.py  test_evidence_store_cli.py  test_executable_contract_model.py  test_execution_depth.py  test_execution_records_v2.py  test_external_target_binding.py  test_false_closure_v2.py  test_global_router_projection_current.py  test_global_router_transaction.py  test_installation.py  test_installation_verification_receipt.py  test_installed_parity_authority.py  test_launch_plan_v2.py  test_native_depth_evidence_identity.py  test_portable_content_policy.py  test_portfolio_impact_receipt.py  test_portfolio_production_revalidation.py  test_portfolio_runtime_v2.py  test_portfolio_scope_lifecycle.py  test_privacy.py  test_provenance.py  test_release_workflow.py  test_report_output_boundary.py  test_route_runtime_v2.py  test_run_replay.py  (+24 more)
(+818 files in other folders)
