[project]
name = "skillguard"
version = "0.1.6"
description = "A local runtime-contract and maintenance framework for Codex skills."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "SkillGuard contributors" }
]
keywords = [
  "codex",
  "skills",
  "maintenance",
  "validation"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance"
]

[tool.skillguard.repository]
baseline_version = "0.1.6"
implementation_status = "local-cli-dispatch-runtime-contract"
public_claim_boundary = "Local script dispatch, runtime work-contract commands, explicit fixture manifests, examples, and standard-library smoke checks exist; packaged CLI installation, broad fixture coverage, suite automation, git history, publication, release readiness, and code-contract validation are separate downstream work."
