[project]
name = "skillguard"
version = "0.3.0"
description = "A local runtime-contract and maintenance framework for Codex skills."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "SkillGuard contributors" }
]
keywords = [
  "codex",
  "skills",
  "maintenance",
  "validation"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance"
]

[tool.skillguard.repository]
baseline_version = "0.3.0"
implementation_status = "local-cli-dispatch-runtime-contract"
public_claim_boundary = "Local V1 dispatch, V2 executable-contract runtime, focused/full TestMesh, staged whole-tree install/rollback, privacy/provenance checks, and two-stage self-host evidence exist. Packaged CLI distribution, hosted service behavior, binary artifacts, remote CI execution, GitHub publication, and future AI correctness remain separate claims."
